nearly there with CAR(1), just need some final testing; add pp_check() and more detailed examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ S3method(plot,mvgam_lfo)
 S3method(posterior_epred,mvgam)
 S3method(posterior_linpred,mvgam)
 S3method(posterior_predict,mvgam)
+S3method(pp_check,mvgam)
 S3method(ppc,mvgam)
 S3method(predict,mvgam)
 S3method(print,mvgam)
@@ -95,6 +96,7 @@ export(plot_mvgam_series)
 export(plot_mvgam_smooth)
 export(plot_mvgam_trend)
 export(plot_mvgam_uncertainty)
+export(pp_check)
 export(ppc)
 export(roll_eval_mvgam)
 export(score)
@@ -109,6 +111,7 @@ importFrom(bayesplot,color_scheme_set)
 importFrom(bayesplot,log_posterior)
 importFrom(bayesplot,neff_ratio)
 importFrom(bayesplot,nuts_params)
+importFrom(bayesplot,pp_check)
 importFrom(brms,bernoulli)
 importFrom(brms,conditional_effects)
 importFrom(brms,dbeta_binomial)
