remove binomial_logit_glm for now to ensure backward compatibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ importFrom(bayesplot,pp_check)
 importFrom(brms,bernoulli)
 importFrom(brms,conditional_effects)
 importFrom(brms,dbeta_binomial)
+importFrom(brms,do_call)
 importFrom(brms,dstudent_t)
 importFrom(brms,get_prior)
 importFrom(brms,logm1)
@@ -153,6 +154,7 @@ importFrom(graphics,rug)
 importFrom(graphics,title)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
+importFrom(insight,get_predictors)
 importFrom(loo,is.loo)
 importFrom(loo,loo)
 importFrom(loo,loo_compare)
