add badges; remove macOS cmd check action for now

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,11 +18,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          #- {os: macOS-latest,   r: 'release', rtools: ''}
-          - {os: windows-latest, r: 'release', rtools: '42'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release', rtools: ''}
-          - {os: ubuntu-latest,   r: 'release', rtools: ''}
-          - {os: ubuntu-latest,   r: 'oldrel-1', rtools: ''}
+          # use 4.1 to check with rtools40's older compiler
+          - {os: windows-latest, r: '4.1'}
+          - {os: windows-latest, r: 'oldrel', rtools: '42'}
+          - {os: ubuntu-latest, r: 'devel', http-user-agent: 'release', rtools: ''}
+          - {os: ubuntu-latest, r: 'release', rtools: ''}
+          - {os: ubuntu-latest, r: 'oldrel-1', rtools: ''}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
