--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Description: Fit Bayesian Dynamic Generalised Additive Models to sets of time se
              uses sequential importance sampling to assimilate new observations as they become available. 
              References: Clark & Wells (2022) <https://doi.org/10.1111/2041-210X.13974>.
 URL: https://github.com/nicholasjclark/mvgam, https://nicholasjclark.github.io/mvgam/
+BugReports: https://github.com/nicholasjclark/mvgam/issues
 License: MIT + file LICENSE
 Depends: 
     R (>= 3.6.0),
