fix a few urls; update buildignore

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,14 +6,17 @@
 ^doc$
 ^_pkgdown\.yml$
 ^docs$
+^misc$
 ^pkgdown$
-^\.github$
-^README.Rmd
-^index.Rmd
-^index.md
-^tests/testthat/Rplots\.pdf$
+^README\.Rmd$
+^README-.*\.png$
+^\README_cache$
+^index\.Rmd
+^index\.md
 ^base_gam.txt
 ^Meta$
 ^CRAN-SUBMISSION$
 ^cran-comments\.md$
 ^tests/mvgam_examples\.R$
+^tests/testthat/Rplots\.pdf$
+^tests/local$
