--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,9 @@ Authors@R:
            comment = c(ORCID = "0000-0001-7131-3301"))
 Description: Fit Bayesian Dynamic Generalised Additive Models to sets of time series. 
              The primary purpose of the package is to build dynamic nonlinear models that incorporate 
-             the flexibility of GAMs in observation and latent (possibly dynamic) process components 
-             for time series analysis and forecasting. Estimation is performed using Markov Chain Monte Carlo (MCMC)
-             with Hamiltonian Monte Carlo in the software Stan. The package also includes 
-             utilities for online updating of forecast distributions with a recursive particle filter that 
-             uses sequential importance sampling to assimilate new observations as they become available. 
+             the flexibility of GAMs in observation and process components of State-Space models. 
+             Estimation is performed using Markov Chain Monte Carlo
+             with Hamiltonian Monte Carlo in the software 'Stan'. 
              References: Clark & Wells (2022) <doi:10.1111/2041-210X.13974>.
 URL: https://github.com/nicholasjclark/mvgam, https://nicholasjclark.github.io/mvgam/
 BugReports: https://github.com/nicholasjclark/mvgam/issues
