--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -47,6 +47,7 @@ jobs:
           dependencies: NA
           extra-packages: |
               BH
+              RcppEigen
               knitr
               extraDistr
               lubridate
