--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: mvgam
 Title: Multivariate (Dynamic) Generalized Additive Models
 Version: 1.1.0
-Date: 2024-03-26
+Date: 2024-05-01
 Authors@R:
     person("Nicholas J", "Clark", , "nicholas.j.clark1214@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7131-3301"))
-Description: Fit Bayesian Dynamic Generalised Additive Models to sets of time series. 
+Description: Fit Bayesian Dynamic Generalized Additive Models to sets of time series. 
              The primary purpose of the package is to build dynamic nonlinear models that incorporate 
-             the flexibility of GAMs in observation and process components of State-Space models. 
+             semiparametric effects in observation and process components of State-Space models. 
              Estimation is performed using Markov Chain Monte Carlo
              with Hamiltonian Monte Carlo in the software 'Stan'. 
              References: Clark & Wells (2022) <doi:10.1111/2041-210X.13974>.
