emulate CRAN in cmdchecks; tidy examples a bit more

--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -23,8 +23,10 @@ jobs:
           - {os: ubuntu-latest, r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest, r: 'release'}
 
+# Use a CRAN-like environment to emulate CRAN submission checks
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      NOT_CRAN: false
       R_KEEP_PKG_SOURCE: yes
 
     steps:
