need xml2 for timings

--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -63,6 +63,7 @@ jobs:
               rjags
               coda
               testthat
+              xml2
               usethis
               rcmdcheck
 
