--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mvgam
 Title: Multivariate (Dynamic) Generalized Additive Models
 Version: 1.1.0
-Date: 2024-05-01
+Date: 2024-05-03
 Authors@R: person("Nicholas J", "Clark", , "nicholas.j.clark1214@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7131-3301"))
 Description: Fit Bayesian Dynamic Generalized Additive Models to sets of time series. This package builds dynamic nonlinear State-Space models that can incorporate semiparametric effects in observation and process components. Estimation is performed using Markov Chain Monte Carlo with Hamiltonian Monte Carlo in the software 'Stan'. 
 References: Clark & Wells (2022) <doi:10.1111/2041-210X.13974>.
@@ -55,7 +55,6 @@ Suggests:
     runjags,
     usethis,
     testthat
-Additional_repositories:
-    https://mc-stan.org/r-packages/
+Additional_repositories: https://mc-stan.org/r-packages/
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
