update namespace for CRAN checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -158,12 +158,18 @@ importFrom(marginaleffects,get_predict)
 importFrom(marginaleffects,get_vcov)
 importFrom(marginaleffects,plot_predictions)
 importFrom(marginaleffects,set_coef)
+importFrom(methods,cbind2)
 importFrom(methods,new)
 importFrom(mgcv,Predict.matrix)
+importFrom(mgcv,Rrank)
 importFrom(mgcv,bam)
 importFrom(mgcv,betar)
+importFrom(mgcv,gam.side)
+importFrom(mgcv,get.var)
+importFrom(mgcv,interpret.gam)
 importFrom(mgcv,nb)
 importFrom(mgcv,smooth.construct)
+importFrom(mgcv,smoothCon)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,setDefaultCluster)
@@ -183,6 +189,7 @@ importFrom(rstantools,posterior_epred)
 importFrom(rstantools,posterior_linpred)
 importFrom(rstantools,posterior_predict)
 importFrom(scoringRules,es_sample)
+importFrom(stats,.getXlevels)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
 importFrom(stats,as.formula)
@@ -212,7 +219,10 @@ importFrom(stats,mad)
 importFrom(stats,make.link)
 importFrom(stats,median)
 importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
 importFrom(stats,na.fail)
+importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,pacf)
 importFrom(stats,pbeta)
