more mods for cmdcheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ importFrom(mgcv,bam)
 importFrom(mgcv,betar)
 importFrom(mgcv,gam.side)
 importFrom(mgcv,get.var)
+importFrom(mgcv,initial.sp)
 importFrom(mgcv,interpret.gam)
 importFrom(mgcv,nb)
 importFrom(mgcv,smooth.construct)
