remove some cmdcheck warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(stats,formula)
 importFrom(stats,frequency)
 importFrom(stats,gaussian)
 importFrom(stats,is.ts)
+importFrom(stats,lm)
 importFrom(stats,logLik)
 importFrom(stats,mad)
 importFrom(stats,make.link)
