--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -38,6 +38,8 @@ jobs:
               wrswoR
               tweedie
               splines2
+              scoringRules
+              matrixStats
               xts
               collapse
               rmarkdown
