--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(PW)
 export(RW)
 export(VAR)
 export(add_residuals)
+export(betar)
 export(code)
 export(compare_mvgams)
 export(dynamic)
@@ -78,6 +79,7 @@ export(hindcast)
 export(lfo_cv)
 export(lv_correlations)
 export(mvgam)
+export(nb)
 export(neff_ratio)
 export(nmix)
 export(nuts_params)
@@ -97,8 +99,11 @@ export(score)
 export(series_to_mvgam)
 export(sim_mvgam)
 export(student_t)
+export(te)
+export(ti)
 export(tweedie)
 export(variables)
+importFrom(Matrix,nearPD)
 importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,color_scheme_get)
 importFrom(bayesplot,color_scheme_set)
@@ -189,7 +194,6 @@ importFrom(rlang,warn)
 importFrom(rstantools,posterior_epred)
 importFrom(rstantools,posterior_linpred)
 importFrom(rstantools,posterior_predict)
-importFrom(scoringRules,es_sample)
 importFrom(stats,.getXlevels)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
