--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -54,6 +54,8 @@ jobs:
               wrswoR
               tweedie
               splines2
+              scoringRules
+              matrixStats
               xts
               collapse
               rmarkdown
