add functionality to extract stancode similar to brms style

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,12 +50,15 @@ S3method(predict,mvgam)
 S3method(print,mvgam)
 S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
+S3method(print,mvgammodel)
 S3method(residuals,mvgam)
 S3method(rhat,mvgam)
 S3method(score,mvgam_forecast)
 S3method(set_coef,mvgam)
 S3method(smooth.construct,mod.smooth.spec)
 S3method(smooth.construct,moi.smooth.spec)
+S3method(stancode,mvgam)
+S3method(stancode,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 S3method(update,mvgam)
