--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ S3method(as_draws_matrix,mvgam)
 S3method(as_draws_rvars,mvgam)
 S3method(coef,mvgam)
 S3method(conditional_effects,mvgam)
+S3method(eval_smooth,mod.smooth)
+S3method(eval_smooth,moi.smooth)
 S3method(find_predictors,mvgam)
 S3method(find_predictors,mvgam_prefit)
 S3method(fitted,mvgam)
@@ -130,6 +132,7 @@ importFrom(brms,pstudent_t)
 importFrom(brms,qstudent_t)
 importFrom(brms,rbeta_binomial)
 importFrom(brms,rstudent_t)
+importFrom(brms,stancode)
 importFrom(brms,student)
 importFrom(ggplot2,scale_colour_discrete)
 importFrom(ggplot2,scale_fill_discrete)
@@ -154,6 +157,14 @@ importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,rug)
 importFrom(graphics,title)
+importFrom(gratia,by_level)
+importFrom(gratia,by_variable)
+importFrom(gratia,eval_smooth)
+importFrom(gratia,is_factor_by_smooth)
+importFrom(gratia,smooth_dim)
+importFrom(gratia,smooth_label)
+importFrom(gratia,smooths)
+importFrom(gratia,spline_values)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
@@ -271,6 +282,7 @@ importFrom(stats,ts)
 importFrom(stats,update)
 importFrom(stats,update.formula)
 importFrom(stats,var)
+importFrom(tibble,add_column)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
