add eval_smooth general method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(code)
 export(compare_mvgams)
 export(dynamic)
 export(eval_mvgam)
+export(eval_smooth)
 export(forecast)
 export(get_mvgam_priors)
 export(hindcast)
@@ -157,14 +158,6 @@ importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,rug)
 importFrom(graphics,title)
-importFrom(gratia,by_level)
-importFrom(gratia,by_variable)
-importFrom(gratia,eval_smooth)
-importFrom(gratia,is_factor_by_smooth)
-importFrom(gratia,smooth_dim)
-importFrom(gratia,smooth_label)
-importFrom(gratia,smooths)
-importFrom(gratia,spline_values)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
@@ -282,7 +275,6 @@ importFrom(stats,ts)
 importFrom(stats,update)
 importFrom(stats,update.formula)
 importFrom(stats,var)
-importFrom(tibble,add_column)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,lsf.str)
