--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,6 +53,7 @@ Suggests:
     coda,
     runjags,
     tibble (>= 3.0.0),
+    gratia,
     usethis,
     testthat
 Additional_repositories: https://mc-stan.org/r-packages/
