add gratia to Enhances and conditionally load methods for monotonic evaluation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,9 +53,10 @@ Suggests:
     coda,
     runjags,
     tibble (>= 3.0.0),
-    gratia,
     usethis,
     testthat
+Enhances:
+    gratia
 Additional_repositories: https://mc-stan.org/r-packages/
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
