--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,6 @@ S3method(as_draws_matrix,mvgam)
 S3method(as_draws_rvars,mvgam)
 S3method(coef,mvgam)
 S3method(conditional_effects,mvgam)
-S3method(eval_smooth,mod.smooth)
-S3method(eval_smooth,moi.smooth)
 S3method(find_predictors,mvgam)
 S3method(find_predictors,mvgam_prefit)
 S3method(fitted,mvgam)
@@ -78,7 +76,8 @@ export(code)
 export(compare_mvgams)
 export(dynamic)
 export(eval_mvgam)
-export(eval_smooth)
+export(eval_smoothDotmodDotsmooth)
+export(eval_smoothDotmoiDotsmooth)
 export(forecast)
 export(get_mvgam_priors)
 export(hindcast)
