more gratia methods supported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,8 +74,10 @@ export(add_residuals)
 export(betar)
 export(code)
 export(compare_mvgams)
+export(drawDotmvgam)
 export(dynamic)
 export(eval_mvgam)
+export(eval_smoothDothilbertDotsmooth)
 export(eval_smoothDotmodDotsmooth)
 export(eval_smoothDotmoiDotsmooth)
 export(forecast)
