add ensemble and standata methods; more tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(as_draws_matrix,mvgam)
 S3method(as_draws_rvars,mvgam)
 S3method(coef,mvgam)
 S3method(conditional_effects,mvgam)
+S3method(ensemble,mvgam_forecast)
 S3method(find_predictors,mvgam)
 S3method(find_predictors,mvgam_prefit)
 S3method(fitted,mvgam)
@@ -59,6 +60,7 @@ S3method(smooth.construct,mod.smooth.spec)
 S3method(smooth.construct,moi.smooth.spec)
 S3method(stancode,mvgam)
 S3method(stancode,mvgam_prefit)
+S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
 S3method(update,mvgam)
@@ -76,6 +78,7 @@ export(code)
 export(compare_mvgams)
 export(drawDotmvgam)
 export(dynamic)
+export(ensemble)
 export(eval_mvgam)
 export(eval_smoothDothilbertDotsmooth)
 export(eval_smoothDotmodDotsmooth)
@@ -135,6 +138,7 @@ importFrom(brms,qstudent_t)
 importFrom(brms,rbeta_binomial)
 importFrom(brms,rstudent_t)
 importFrom(brms,stancode)
+importFrom(brms,standata)
 importFrom(brms,student)
 importFrom(ggplot2,scale_colour_discrete)
 importFrom(ggplot2,scale_fill_discrete)
