forgot to roxygenize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,8 @@ export(series_to_mvgam)
 export(set_prior)
 export(sim_mvgam)
 export(slopes)
+export(stancode)
+export(standata)
 export(student)
 export(student_t)
 export(t2)
