add VAR stability metrics ala Ives et al

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(score,mvgam_forecast)
 S3method(set_coef,mvgam)
 S3method(smooth.construct,mod.smooth.spec)
 S3method(smooth.construct,moi.smooth.spec)
+S3method(stability,mvgam)
 S3method(stancode,mvgam)
 S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_prefit)
@@ -136,6 +137,7 @@ export(series_to_mvgam)
 export(set_prior)
 export(sim_mvgam)
 export(slopes)
+export(stability)
 export(stancode)
 export(standata)
 export(student)
