--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,7 +75,14 @@ export(GP)
 export(PW)
 export(RW)
 export(VAR)
+export(ZMVN)
 export(add_residuals)
+export(as_draws)
+export(as_draws_array)
+export(as_draws_df)
+export(as_draws_list)
+export(as_draws_matrix)
+export(as_draws_rvars)
 export(bernoulli)
 export(beta_binomial)
 export(betar)
@@ -92,7 +99,9 @@ export(eval_smoothDothilbertDotsmooth)
 export(eval_smoothDotmodDotsmooth)
 export(eval_smoothDotmoiDotsmooth)
 export(forecast)
+export(get_data)
 export(get_mvgam_priors)
+export(get_predict)
 export(gp)
 export(hindcast)
 export(hypotheses)
