also need RcppEigen

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -33,6 +33,7 @@ jobs:
           dependencies: NA
           extra-packages: |
               BH
+              RcppEigen
               knitr
               extraDistr
               lubridate
