add update and residual_cor functions for jsdgams

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ S3method(print,mvgam)
 S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
 S3method(print,mvgammodel)
+S3method(residual_cor,jsdgam)
 S3method(residuals,mvgam)
 S3method(rhat,mvgam)
 S3method(score,mvgam_forecast)
@@ -68,6 +69,7 @@ S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
+S3method(update,jsdgam)
 S3method(update,mvgam)
 S3method(variables,mvgam)
 export("%>%")
@@ -142,6 +144,7 @@ export(predictions)
 export(prior)
 export(prior_)
 export(prior_string)
+export(residual_cor)
 export(rhat)
 export(roll_eval_mvgam)
 export(s)
