improve print and summary; add corpcor to dependencies in actions checks

--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -55,6 +55,7 @@ jobs:
               lubridate
               wrswoR
               tweedie
+              corpcor
               splines2
               scoringRules
               matrixStats
