--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,6 +53,7 @@ jobs:
               lubridate
               wrswoR
               tweedie
+              corpcor
               splines2
               scoringRules
               matrixStats
