--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ importFrom(bayesplot,pp_check)
 importFrom(brms,bernoulli)
 importFrom(brms,beta_binomial)
 importFrom(brms,brm)
+importFrom(brms,brmsterms)
 importFrom(brms,conditional_effects)
 importFrom(brms,dbeta_binomial)
 importFrom(brms,do_call)
