`augment.mvgam` tidying method added
Implemented an `augment` method for mvgam objects, one of the "tidying" methods. Largely diverged from the set of recommendations in [generics](https://web.archive.org/web/20240520145739/https://www.tidymodels.org/learn/develop/broom/#implementing-the-augment-method).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(as_draws_df,mvgam)
 S3method(as_draws_list,mvgam)
 S3method(as_draws_matrix,mvgam)
 S3method(as_draws_rvars,mvgam)
+S3method(augment,mvgam)
 S3method(coef,mvgam)
 S3method(conditional_effects,mvgam)
 S3method(ensemble,mvgam_forecast)
@@ -87,6 +88,7 @@ export(as_draws_df)
 export(as_draws_list)
 export(as_draws_matrix)
 export(as_draws_rvars)
+export(augment)
 export(bernoulli)
 export(beta_binomial)
 export(betar)
@@ -196,6 +198,7 @@ importFrom(brms,set_prior)
 importFrom(brms,stancode)
 importFrom(brms,standata)
 importFrom(brms,student)
+importFrom(generics,augment)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
@@ -334,6 +337,7 @@ importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rbinom)
 importFrom(stats,reformulate)
+importFrom(stats,residuals)
 importFrom(stats,rgamma)
 importFrom(stats,rlnorm)
 importFrom(stats,rnbinom)
