1st steps to supporting lists of formulae for multivariate or multinomial outcomes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -249,6 +249,7 @@ importFrom(mgcv,Predict.matrix)
 importFrom(mgcv,Rrank)
 importFrom(mgcv,bam)
 importFrom(mgcv,betar)
+importFrom(mgcv,gam.control)
 importFrom(mgcv,gam.side)
 importFrom(mgcv,get.var)
 importFrom(mgcv,initial.sp)
