add matt's ggplot version of plot_mvgam_series; add patchwork to imports and update docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -306,6 +306,7 @@ importFrom(stats,formula)
 importFrom(stats,frequency)
 importFrom(stats,gaussian)
 importFrom(stats,is.ts)
+importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,logLik)
 importFrom(stats,mad)
