--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Date: 2024-09-05
 Authors@R: c(person("Nicholas J", "Clark", , "nicholas.j.clark1214@gmail.com", 
                     role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7131-3301")),
              person("Scott", "Pease", role = c("ctb"),
-                    comment = c("broom enhancements")))
+                    comment = c("broom enhancements")),
+             person("Matthijs", "Hollanders", role = c("ctb"),
+                    comment = c("ggplot visualizations")))
 Description: Fit Bayesian Dynamic Generalized Additive Models to multivariate observations. Users can build nonlinear State-Space models that can incorporate semiparametric effects in observation and process components, using a wide range of observation families. Estimation is performed using Markov Chain Monte Carlo with Hamiltonian Monte Carlo in the software 'Stan'. References: Clark & Wells (2022) <doi:10.1111/2041-210X.13974>.
 URL: https://github.com/nicholasjclark/mvgam, https://nicholasjclark.github.io/mvgam/
 BugReports: https://github.com/nicholasjclark/mvgam/issues
@@ -31,7 +33,8 @@ Imports:
     magrittr,
     rlang,
     generics,
-    tibble (>= 3.0.0)
+    tibble (>= 3.0.0),
+    patchwork (>= 1.2.0)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
