begin making the how_to_cite function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(get_data,mvgam_prefit)
 S3method(get_predict,mvgam)
 S3method(get_vcov,mvgam)
 S3method(hindcast,mvgam)
+S3method(how_to_cite,mvgam)
 S3method(irf,mvgam)
 S3method(lfo_cv,mvgam)
 S3method(logLik,mvgam)
@@ -53,6 +54,7 @@ S3method(posterior_predict,mvgam)
 S3method(pp_check,mvgam)
 S3method(ppc,mvgam)
 S3method(predict,mvgam)
+S3method(print,how_to_cite)
 S3method(print,mvgam)
 S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
@@ -111,6 +113,7 @@ export(get_mvgam_priors)
 export(get_predict)
 export(gp)
 export(hindcast)
+export(how_to_cite)
 export(hypotheses)
 export(irf)
 export(jsdgam)
