--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_prefit)
+S3method(tidy,mvgam)
 S3method(update,jsdgam)
 S3method(update,mvgam)
 S3method(variables,mvgam)
@@ -166,6 +167,7 @@ export(student_t)
 export(t2)
 export(te)
 export(ti)
+export(tidy)
 export(tweedie)
 export(variables)
 importFrom(Rcpp,evalCpp)
@@ -203,6 +205,7 @@ importFrom(brms,stancode)
 importFrom(brms,standata)
 importFrom(brms,student)
 importFrom(generics,augment)
+importFrom(generics,tidy)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
