--- a/.github/workflows/memcheck.yaml
+++ b/.github/workflows/memcheck.yaml
@@ -41,14 +41,12 @@ jobs:
         run: |
           R -d valgrind -f memcheck.R
 
-      - name: Format R code using Air
-        uses: rstudio/shiny-workflows/format-r-code@v1
-
       - name: Configure GH
         run: |
           git config --global user.name "$GITHUB_ACTOR"
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Commit Air formatting changes
+      - name: Format R code using Air and push
+        uses: rstudio/shiny-workflows/format-r-code@v1
         run: |
-          git commit -m '`air format` (GitHub Actions)'
+          git push
