--- a/.github/workflows/memcheck.yaml
+++ b/.github/workflows/memcheck.yaml
@@ -47,13 +47,12 @@ jobs:
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
 
-      - name: Install air (latest, Mac/Linux)
-        if: inputs.version == 'latest' && runner.os != 'Windows'
+      - name: Install Air latest
         shell: bash
         run: |
           curl -LsSf https://github.com/posit-dev/air/releases/latest/download/air-installer.sh | sh
 
-      - name: air version
+      - name: Air version
         shell: bash
         run: |
           echo ""
