add mvgam for pkgdown

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           dependencies: NA
           extra-packages: |
+              local::.
               pkgdown
               remotes
               knitr
