--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(stancode,mvgam)
 S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
+S3method(summary,mvgam_irf)
 S3method(summary,mvgam_prefit)
 S3method(update,jsdgam)
 S3method(update,mvgam)
