add class and plotting method for residual correlations from `jsdgam`; bump version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ S3method(plot,mvgam_fevd)
 S3method(plot,mvgam_forecast)
 S3method(plot,mvgam_irf)
 S3method(plot,mvgam_lfo)
+S3method(plot,mvgam_residcor)
 S3method(posterior_epred,mvgam)
 S3method(posterior_linpred,mvgam)
 S3method(posterior_predict,mvgam)
