--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -57,7 +57,7 @@ jobs:
           cmdstanr::check_cmdstan_toolchain(fix = TRUE)
           cmdstanr::install_cmdstan()
           remotes::install_github('paul-buerkner/brms')
-          remotes::install_github('r-lib/pkgdown')
+          remotes::install_version("pkgdown", version = "2.0.9", repos = "http://cran.us.r-project.org")
         shell: Rscript {0}
 
       - name: Build site
