--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           dependencies: NA
           extra-packages: |
+              mvgam
               knitr
               extraDistr
               lubridate
