--- a/.github/workflows/R-CMD-check-rstan.yaml
+++ b/.github/workflows/R-CMD-check-rstan.yaml
@@ -48,6 +48,7 @@ jobs:
         with:
           dependencies: NA
           extra-packages: |
+              mvgam
               BH
               RcppEigen
               knitr
