--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -6,5 +6,9 @@ authors:
 
 template:
   bootstrap: 5
-  bootswatch: sandstone
+  bootswatch: flatly
 
+navbar:
+  structure:
+    left: [intro, articles, reference, news]
+    right: [search, github]
