--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,6 +36,7 @@ jobs:
           extra-packages: |
               local::.
               remotes
+              vembedr
               knitr
               extraDistr
               lubridate
