--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ S3method(stancode,mvgam_prefit)
 S3method(standata,mvgam_prefit)
 S3method(summary,mvgam)
 S3method(summary,mvgam_fevd)
+S3method(summary,mvgam_forecast)
 S3method(summary,mvgam_irf)
 S3method(summary,mvgam_prefit)
 S3method(tidy,mvgam)
