--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ S3method(print,mvgam_conditional_effects)
 S3method(print,mvgam_prefit)
 S3method(print,mvgammodel)
 S3method(residual_cor,jsdgam)
+S3method(residual_cor,mvgam)
 S3method(residuals,mvgam)
 S3method(rhat,mvgam)
 S3method(score,mvgam_forecast)
