improve residcor plotting functionality; update examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -318,6 +318,7 @@ importFrom(stats,fitted)
 importFrom(stats,formula)
 importFrom(stats,frequency)
 importFrom(stats,gaussian)
+importFrom(stats,hclust)
 importFrom(stats,is.ts)
 importFrom(stats,lag)
 importFrom(stats,lm)
