support correlated processes when plotting residual correlations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -297,6 +297,7 @@ importFrom(rstantools,posterior_predict)
 importFrom(stats,.getXlevels)
 importFrom(stats,Gamma)
 importFrom(stats,acf)
+importFrom(stats,as.dist)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
