--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -42,6 +42,7 @@ jobs:
               gratia
               wrswoR
               tweedie
+              ggrepel
               corpcor
               splines2
               scoringRules
