--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(model.frame,mvgam)
 S3method(model.frame,mvgam_prefit)
 S3method(neff_ratio,mvgam)
 S3method(nuts_params,mvgam)
+S3method(ordinate,jsdgam)
 S3method(pairs,mvgam)
 S3method(plot,mvgam)
 S3method(plot,mvgam_conditional_effects)
@@ -135,6 +136,7 @@ export(nb)
 export(neff_ratio)
 export(nmix)
 export(nuts_params)
+export(ordinate)
 export(plot_comparisons)
 export(plot_mvgam_factors)
 export(plot_mvgam_fc)
@@ -240,6 +242,7 @@ importFrom(graphics,polygon)
 importFrom(graphics,rect)
 importFrom(graphics,rug)
 importFrom(graphics,title)
+importFrom(grid,arrow)
 importFrom(insight,find_predictors)
 importFrom(insight,get_data)
 importFrom(insight,get_predictors)
