--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mvgam
 Title: Multivariate (Dynamic) Generalized Additive Models
-Version: 1.1.54
-Date: 2025-04-02
+Version: 1.1.55
+Date: 2025-04-03
 Authors@R: c(person("Nicholas J", "Clark", , "nicholas.j.clark1214@gmail.com", 
                     role = c("aut", "cre"), comment = c(ORCID = "0000-0001-7131-3301")),
              person("Sarah", "Heaps", role = c("ctb"),
@@ -50,6 +50,7 @@ Suggests:
     extraDistr,
     corpcor,
     wrswoR,
+    ggrepel,
     xts,
     lubridate,
     knitr, 
